--- a/_config.yml
+++ b/_config.yml
@@ -1,3 +1,5 @@
-title:Sai guru charan
-show_downloads:true
-theme:jekyll-theme-minimal
+title: Sai guru charan
+logo: sai.peg
+show_downloads: true
+theme: jekyll-theme-minimal
+
