--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,5 @@
 title: Sai guru charan
-logo: sai.jpeg
+logo: /assets/img/sai.jpeg
+#description: text below image
 show_downloads: true
 theme: jekyll-theme-minimal
-
