--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,5 @@
 title: Sai guru charan
-logo: example-portfolio-main/assets/img/pngegg.png
+logo: assets/img/pngegg.png
 #description: text below image
 show_downloads: true
 theme: jekyll-theme-minimal
